# tinyqgengine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  build_bullet.bat  build_bullet.sh  build_cmft.bat  build_crossguid.bat  build_crossguid.sh  build_glslang.bat  build_opengex.bat  build_opengex.sh  build_shader.bat  build_spirvcross.bat  build_zlib.bat  build_zlib.sh  config.h  config.h.in  run.bat  shader_converter.bat
Editor/: CMakeLists.txt  EditorConfig.cpp  EditorLogic.cpp  EditorLogic.hpp
Physics/: CMakeLists.txt
Physics/Bullet/: BulletPhysicsManager.cpp  BulletPhysicsManager.hpp  CMakeLists.txt
Physics/QG/: CMakeLists.txt  MotionState.hpp  QGPhysicsManager.cpp  QGPhysicsManager.hpp  RigidBody.hpp
RHI/: CMakeLists.txt
RHI/D2d/: CMakeLists.txt  D2dGraphicsManager.cpp  D2dGraphicsManager.hpp
RHI/D3d/: CMakeLists.txt  D3d12Config.hpp  D3d12GraphicsManager.cpp  D3d12GraphicsManager.hpp  D3dShaderManager.cpp  D3dShaderManager.hpp
RHI/DirectX3D/: D3d12GraphicsManager.cpp  D3d12GraphicsManager.hpp
RHI/OpenGL/: CMakeLists.txt  OpenGLConfig.hpp  OpenGLESConfig.hpp  OpenGLESGraphicsManager.cpp  OpenGLESGraphicsManager.hpp  OpenGLESShaderManager.hpp  OpenGLGraphicsManager.cpp  OpenGLGraphicsManager.hpp  OpenGLGraphicsManagerCommonBase.cpp  OpenGLGraphicsManagerCommonBase.hpp  OpenGLShaderManager.cpp  OpenGLShaderManager.hpp  OpenGLShaderManagerCommonBase.cpp  OpenGLShaderManagerCommonBase.hpp
Test/: AnimationTest.cpp  AssetLoaderTest.cpp  BezierCubic1DTest.cpp  BulletTest.cpp  CMakeLists.txt  ChronoTest.cpp  ColorSpaceConversionTest.cpp  GeomMathTest.cpp  GjkTest.cpp  JpegParserTest.cpp  LinearInterpolateTest.cpp  NumericalMethodsTest.cpp  OgexParserTest.cpp  PngParserTest.cpp  PolarDecomposeTest.cpp  QRDecomposeTest.cpp  QuickhullTest.cpp  RasterizationTest.cpp  SceneLoadingTest.cpp  SceneObjectTest.cpp  TgaParserTest.cpp  dump_float_as_binary.cpp
assert/shaders/: cbuffer2.h
asset/scene/: Example.ogex  Rocks_02.ogex  area_light.ogex  ground.ogex  material_balls.ogex  normal_map.ogex  point_light.ogex  splash.ogex  sun_light.ogex
asset/shaders/: basic.hlsl  basic_ps.glsl  basic_vs.glsl  cbuffer.glsl  cbuffer.h  common.glsl  cubemap_ps.glsl  debug_ps.glsl  debug_vs.glsl  depthcubemap_ps.glsl  depthcubemaparray_ps.glsl  depthtexture_ps.glsl  depthtexturearray_ps.glsl  integrateBRDF_cs.glsl  msaa_resolver.hlsl  passthrough_cube_vs.glsl  passthrough_vs.glsl  pbr_ps.glsl  shadowmap_omni_gs.glsl  shadowmap_omni_vs.glsl  shadowmap_ps.glsl  shadowmap_vs.glsl  simple.hlsl.ps  simple.hlsl.vs  skybox_ps.glsl  skybox_vs.glsl  terrain_ps.glsl  terrain_tes.glsl  terrain_vs.glsl  texture_ps.glsl
cmake/: FindLibuuid.cmake  android.cmake  clang-cl.cmake  psp2snc.cmake
empty/: CMakeLists.txt  EmptyApplication.cpp
framework/: CMakeLists.txt
framework/Ability/: Ability.hpp  Animatable.hpp
framework/Algorism/: Bezier.hpp  Bresenham.hpp  CMakeLists.txt  Curve.hpp  Gjk.hpp  Linear.hpp  MatrixComposeDecompose.hpp  Tree.hpp  TriangleRasterization.hpp  aabb.hpp  numerical.hpp  quickhull.cpp  quickhull.hpp
framework/DispatchPass/: BRDFIntegrator.cpp  BRDFIntegrator.hpp
framework/DrawPass/: ForwardRenderPass.cpp  ForwardRenderPass.hpp  HUDPass.cpp  HUDPass.hpp  ShadowMapPass.cpp  ShadowMapPass.hpp  SkyBoxPass.cpp  SkyBoxPass.hpp  TerrainPass.cpp  TerrainPass.hpp
platform/: CMakeLists.txt
platform/Linux/: CMakeLists.txt  OpenGLApplication.cpp  OpenGLApplication.hpp  OpenGLApplicationConfig.cpp  XcbApplication.cpp  XcbApplication.hpp  helloengine_opengl.cpp  helloengine_xcb.cpp
platform/Windows/: CMakeLists.txt  D3d12Application.cpp  D3d12Application.hpp  D3d12ApplicationConfig.cpp  Mesh.h  OpenGLApplication.cpp  OpenGLApplication.hpp  OpenGLApplicationConfig.cpp  WindowsApplication.cpp  WindowsApplication.hpp  copy.pso  copy.vso  helloengine_d2d.cpp  helloengine_d3d.cpp  helloengine_d3d12.cpp  helloengine_opengl.cpp  helloengine_win.cpp
platform/Windows/test/: CMakeLists.txt  TextureLoadTest.cpp
(+287 files in other folders)
